# nevr

./: Cargo.toml  README.md
shaders/: material.glsl  random.glsl  raycommon.glsl  rchit.glsl  rgen.glsl  rintersect.glsl  rmiss.glsl  rmiss_shadow.glsl  scatter.glsl  shader.rchit.spv  shader.rgen.spv
src/: lib.rs
src/engine/: app.rs  blas.rs  camera.rs  color.rs  context.rs  denoiser.rs  geometry.rs  light.rs  mod.rs  node.rs  render.rs  scene.rs  skybox.rs  voxel.rs  world.rs
src/engine/shaders/: a_trous.wgsl  nlm_denoiser.wgsl  no_denoiser.wgsl  raytracing.wgsl  simple_denoiser.wgsl
src/engine/vulkan/: buffer.rs  device.rs  mod.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs  vulkan_instance.rs
