[package]
name = "nevr"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = { version = "0.30.11", default-features = false, features = ["rwh_06"] }
nalgebra-glm = "0.19.0"
bytemuck = "1.23.1"
egui_winit_vulkano = { version = "0.28.0", default-features = false, features = ["links", "image", "clipboard", "x11"] }
itertools = "0.14.0"